# CppCourseLabs

./: README.md
labwork-10-DIMON3-tech/: CMakeLists.txt
labwork-10-DIMON3-tech/Classes/: CMakeLists.txt  Forecast.h  config.json  console-forecast.h  get-info.h
labwork-10-DIMON3-tech/Run/: main.cpp
labwork-10-DIMON3-tech/Telegram-bot/: CMakeLists.txt  telegram-bot.h
labwork-3-DIMON3-tech/: bmp.h  main.cpp
labwork-4-DIMON3-tech/: CMakeLists.txt  consoleRead.cpp  file_from_archive1.txt  hemming.cpp  hemming.h  main.cpp  readFiles.cpp  readFiles.h  test.cpp
labwork-8-DIMON3-tech/: CMakeLists.txt
labwork-8-DIMON3-tech/lib/: CMakeLists.txt  buffer.h  buffer_ext.h
labwork-8-DIMON3-tech/src/: CMakeLists.txt  buffer.cpp
labwork-8-DIMON3-tech/tst/: CMakeLists.txt  buffer_test.cpp
